[package]
name = "smf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
bytes = "1"
futures = "0.3"
urlencoding = "2"
base64 = "0.22"
rasn = { version = "0.20", features = ["macros"] }
rasn-pkix = "0.20"
x509-cert = { version = "0.2", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
